kubernetes/apps/downloads/seerr/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr
  namespace: downloads
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: http
    - name: internal
      namespace: network
      sectionName: https
    - name: external
      namespace: network
      sectionName: http
  hostnames:
    - "seerr.whoverse.dev"
    - "requests.whoverse.nexus"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: seerr
          port: 5055
